--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fireflies Animation</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <audio id="backgroundMusic" src="music.mp3" autoplay loop></audio>
+    <audio id="backgroundMusic" src="./music.mp3" autoplay loop></audio>
     <div id="container" class="container">
-        <img id="MoDomDom" src="chu.png" alt="MoDomDom">
+        <img id="MoDomDom" src="./chu.png" alt="MoDomDom">
         <div class="menu-button menu-button-0">Menu 1</div>
         <div class="menu-button menu-button-1">Menu 2</div>
         <div class="menu-button menu-button-2">Menu 3</div>
@@ -18,6 +18,6 @@
         <div class="menu-button menu-button-5"></div>
     </div>
     <button id="mainButton" onclick="formCircleAndLine()">Click vào đây</button>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
